--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,25 +6,19 @@ on:
   pull_request:
     branches: [ main ]
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Build the Docker image
-      -
-        name: Login to DockerHub
+      - name: Build the Docker image
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        uses: actions/checkout@v2
-      - 
-        name: Build the Docker image
+      - uses: actions/checkout@v2
+      - name: Build the Docker image
         run: docker build -t mneorepo/go-project .
-      - 
-        name: Push Docker Image
+      - name: Push Docker Image
         run: docker push mneorepo/go-project
 
